Restore java 1.4 compatibility
git-svn-id: http://svn.codehaus.org/xfire/trunk/xfire@2179 c7d0bf07-ec0d-0410-b2cc-d48fa9be22ba